infra/k8s/accounts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts
  template:
    metadata:
      labels:
        app: accounts
    spec:
      containers:
        - name: accounts
          image: etprogrammer/accounts
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"   
            limits:
              memory: "512Mi"
              cpu: "500m"   
---
apiVersion: v1
kind: Service
metadata:
  name: accounts-srv
spec:
  selector:
    app: accounts
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
