infra/k8s/content-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content
  template:
    metadata:
      labels:
        app: content
    spec:
      containers:
        - name: content
          image: etprogrammer/content
          ports:
            - containerPort: 3003
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"   
            limits:
              memory: "512Mi"
              cpu: "500m"   
---
apiVersion: v1
kind: Service
metadata:
  name: content-srv
spec:
  selector:
    app: content
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
  type: ClusterIP
