infra/k8s/payment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: etprogrammer/payment
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "500m"  
          command:
            - "node"
            - "--max-old-space-size=1024"  
            - "node_modules/.bin/ts-node-dev"
            - "--poll"
            - "src/index.ts"
---
apiVersion: v1
kind: Service
metadata:
  name: payment-srv
spec:
  selector:
    app: payment
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004
  type: ClusterIP
