infra/k8s/payment-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-mongodb-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-mongodb
  template:
    metadata:
      labels:
        app: payment-mongodb
    spec:
      containers:
        - name: payment-mongodb
          image: mongo:latest
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"   
            limits:
              memory: "512Mi"
              cpu: "500m"   
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: payment-mongodb-srv
spec:
  selector:
    app: payment-mongodb
  ports:
    - protocol: TCP
      port: 27019      
      targetPort: 27017
  type: ClusterIP
